--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bootstrap": "^5.2.2",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongojs": "^3.1.0"
+    "mongojs": "^3.1.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
